--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
 		"@sveltejs/kit": "^2.5.10",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.10",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^9.4.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.39.0",
 		"globals": "^15.3.0",
+		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"svelte": "^4.2.17",
 		"svelte-check": "^3.8.0",
+		"tailwindcss": "^3.4.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
 		"typescript-eslint": "8.0.0-alpha.24",
