--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"typescript-eslint": "8.11.0",
 		"vite": "^5.4.10"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tailwindcss/forms": "^0.5.9"
+	}
 }
