--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@tailwindcss/forms": "^0.5.9"
+		"@tailwindcss/forms": "^0.5.9",
+		"puppeteer": "^23.6.0"
 	}
 }
